fixed layout overlap

--- a/src/components/ui/InfoCard.module.css
+++ b/src/components/ui/InfoCard.module.css
@@ -1,4 +1,5 @@
 .card {
     width:auto;
     margin-bottom: 0.2rem;
+    margin-left: 0.2rem;
 }
